--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react": "^18.2.0"
   },
   "scripts": {
     "start": "nodemon server.js"
