fixing .env file

--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
+NODE_ENV=development;
 PORT=3000;
-MONHO_URL=mongodb+srv://blaze-mustang:mango123@blazecluster.deaxo2z.mongodb.net/gpu_inventory;
+MONGO_URL=mongodb+srv://blaze-mustang:mango123@blazecluster.deaxo2z.mongodb.net/gpu_inventory;
