--- a/config.env
+++ b/config.env
@@ -1,3 +1,2 @@
-NODE_ENV=development;
 PORT=3000;
-MONGO_URL=mongodb+srv://blaze-mustang:mango123@blazecluster.deaxo2z.mongodb.net/gpu_inventory;
+MONGO_URL='mongodb+srv://blaze-mustang:mango123@blazecluster.deaxo2z.mongodb.net/user_database';
