--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "dependencies": {
     "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "react": "^18.2.0"
   },
