--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "popups": "^1.1.3",
     "react": "^18.2.0"
   },
   "scripts": {
