--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "mdb-ui-kit": "^6.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "mongoose-validator": "^2.1.0",
