--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "sendmail": "^1.6.1"
   },
   "scripts": {
     "start": "nodemon server.js"
