--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "http-status": "^1.6.2",
@@ -18,6 +20,7 @@
     "mongoose": "^6.8.3",
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
