--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
