--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.282.0",
     "aws-sdk": "^2.1326.0",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
