--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "react": "^18.2.0",
-    "sendmail": "^1.6.1"
+    "sendmail": "^1.6.1",
+    "url-exists": "^1.0.3"
   },
   "scripts": {
     "start": "nodemon server.js"
