--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local-mongoose": "^7.1.2",
     "react": "^18.2.0",
     "sendmail": "^1.6.1",
+    "url-exist": "^3.0.1",
     "url-exists": "^1.0.3"
   },
   "scripts": {
